--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>VueRouter CDN Template</title>
+    <title>VueRouter CDN Template with Less</title>
 
 
-		<!-- Page Styles -->
-    <link href="Src/Styles/style.css" rel="stylesheet" type="text/css" />
+		<!-- Less Styles -->
+		<link rel="stylesheet/less" type="text/css" href="Src/Styles/style.less" />
+
+
+		<!-- Less CDN's -->
+		<script src="//cdn.jsdelivr.net/npm/less@3.13" ></script>
 
 
 		<!-- Vue & Vue-Router CDN's -->
@@ -15,7 +19,6 @@
 		<script src="https://cdn.jsdelivr.net/npm/vue-router"></script>
   </head>
   <body>
-
 		<div id="app"></div><!-- All components will be rendered here. -->
 
 
